# imakara-admin

./: .gitignore  Dockerfile.backend.datastore  README.md  buf.gen.yaml  docker-compose.yml  package.json  pnpm-lock.yaml
backend/datastore/: Cargo.toml  build.rs
backend/datastore/src/: controller.rs  domain.rs  main.rs  proto.rs
backend/datastore/src/domain/: config.rs  infra.rs  streamers.rs
backend/datastore/src/domain/infra/: streamers.rs
backend/datastore/src/proto/: imakara_admin.rs  imakara_admin_common.rs
backend/datastore/src/repos/: mongodb.rs
backend/datastore/src/repos/mongodb/: entity.rs  streamers.rs
backend/youtube-info/: Dockerfile  common_pb2.py  common_pb2.pyi  common_pb2_grpc.py  main.py  requirements.txt  streamer_info_pb2.py  streamer_info_pb2.pyi  streamer_info_pb2_grpc.py
frontend/: package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/components/: AddEditFrame.tsx  Dashboard.tsx  Streamer.tsx  StreamerLinkList.tsx
frontend/src/infra/: IDatastoreRepository.ts  IYoutubeInfo.ts
frontend/src/infra/grpc/: Base.ts  DatastoreRepository.ts  YoutubeInfo.ts
frontend/src/models/: streamerDetail.ts
frontend/src/proto/: common_connect.ts  common_pb.ts  frontend_connect.ts  frontend_pb.ts  streamer-info_connect.ts  streamer-info_pb.ts
frontend/src/state/: streamers.ts
proto/: common.proto  frontend.proto  streamer-info.proto
proxy/: envoy.yaml
src/: App.tsx
src/components/: AddEditFrame.tsx  Dashboard.tsx  Streamer.tsx  StreamerLinkList.tsx
src/models/: streamerDetail.ts
