[package]
name = "datastore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11"
tonic = "0.8"
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1"
chrono = "0.4"
mongodb = "2.3"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
futures-util = "0.3"

[build-dependencies]
tonic-build = { version = "0.8",  features = ["prost"] }
